# 3-DOF-Planar-Robotic-Arm-ROS-2-Workspace

./: .gitignore  readme.md
src/planar_arm_description/: CMakeLists.txt  package.xml
src/planar_arm_description/launch/: display.launch.py
src/planar_arm_description/rviz/: planar_arm.rviz
src/planar_arm_description/urdf/: planar_arm.urdf.xacro
src/planar_arm_interfaces/: CMakeLists.txt  package.xml
src/planar_arm_interfaces/srv/: ComputeIK.srv
src/planar_arm_kinematics/: package.xml  setup.py
src/planar_arm_kinematics/planar_arm_kinematics/: fk_solver.py  ik_solver.py  test_ik_client.py
