<?xml version="1.0"?>
<package format="3">
  <name>planar_arm_interfaces</name>
  <version>0.0.1</version>
  <description>Custom service interfaces for planar arm</description>
  <maintainer email="suneerth@todo.todo">suneerth</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
