<?xml version="1.0"?>
<package format="3">
  <name>planar_arm_kinematics</name>
  <version>0.0.1</version>
  <description>Forward and Inverse Kinematics for 3-DOF Planar Arm</description>
  <maintainer email="suneerth@todo.todo">suneerth</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>planar_arm_interfaces</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
